<resources>
    <string name="app_name">Tripalert</string>
    <string name="settings"> Settings</string>
    <string name="about"> About </string>
    <string name="myTrackings"> My Tracking </string>
    <string name="followed"> Followed Trackings</string>
    <string name="newTracking">Create</string>
    <string name="noTrackingMsg">Oops seems you haven\'t start a tracking </string>
    <string name="noFollowedTracking"> Seems nobody selected you to a follower \.\.\. yet</string>
    <string name="addContacts"> Select Followers </string>
    <string name="addLocations"> Specify Details </string>
    <string name="verifyTracking"> Verify Tracking </string>
    <string name="sharedLocationPref"> Emergency location sharing</string>
    <string name="sharedLocationDesc"> Share location with followers in case the emergency button is pressed </string>
    <string name="gpsRefreshRatePref"> Gps refresh rate (Minutes) </string>
    <string name="gpsRefreshRatePrefDesc"> How often the application will check for your location to determine status of tracking</string>
    <string name="reachDestinationPref"> Destination reached area (Meters) </string>
    <string name="reachDestinationPrefDesc"> How many meters should be the radius of the area around the destination that when reached the tracking is considered finished</string>
    <string name="delayedNotificationPref"> Delay notification (Minutes) </string>
    <string name="inactivityAllowancePref"> Inactivity Allowance (Minutes) </string>
    <string name="inactivityAllowanceDesc"> How many minutes should pass while you are stationary to be considered not responding </string>
    <string name="inactivityMeterDesc"> How many  meters you have to stay stationary to be consider inactive</string>
    <string name="inactivityMeter"> Inactivity radius (Meters) </string>
    <string name="delayedNotificationPrefDesc"> How many minutes after the passing of the estimated time the tracking is considered delayed</string>
    <string name="currTrackingStart"> From </string>
    <string name="currTrackingDestination"> To </string>
    <string name="currTrackingTimeStarted"> Started At </string>
    <string name="EstimatedTime"> Estimated Duration </string>
    <string name="currTrackingFollowers"> Followers </string>
    <string name="unfollow"> Unfollow </string>
    <string name="next"> Next </string>
    <string name="cancel"> Cancel </string>
    <string name="confirm"> Confirm </string>
    <string name="cannotProcceedDetails"> Make sure you fill out all details</string>
    <string name="cannotProcceedGoBack"> You cant go back, press cancel to go to the home screen </string>
    <string name="cannotProcceedFollowers"> Please select some contacts as followers. </string>
    <string name="noContacts"> None of your contacts has the app installed. Maybe spread the word?</string>
    <string name="errorDB"> Could not write to db </string>
    <string name="delayMessage"> You seem to having a delay in your trip. You can always abort, or estimate again!</string>
    <string name="notRespondingMessage"> You seem to have stopped moving for quite a long. You can always abort, or estimate again!</string>
    <string name="emergencyMessage">You are on an emergency! Press Abort to cancel the Tracking. Or edit estimated time to reset </string>
    <string name="hold">Keep holding the button For emergency </string>
    <!-- -->
    <!-- -->
    <!-- -->
    <string name="channel_one">homeSafe</string>
    <string name="channel_one_description">This indicate the track ends successfully</string>
    <string name="notification_text">Tracking setup succeed. Be safe! Just tap if you need to cancel</string>
    <string name="transport_id" translatable="false">123egal</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">stevxl@gmail.com</string>
    <string name="firebase_password" translatable="false">ISEEcodefathers</string>
    <string name="action_settings">Settings</string>
    <string name="message">This App will send you an SMS message to verify your phone number. Kindly enter your phone Number</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="start_phone_auth">Start Verification</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="enter_verify_code">Enter SMS Code</string>
    <string name="success_message">You have successfully Logged in</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">instant validation</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="signed_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <array name="topics">
        <item>Topic 1</item>
        <item>Topic 2</item>
    </array>
    <string name="NotificationText1"> Tracking on -----cfs. </string>
    <string name="Channel_One"> Tracking 1 . </string>
    <string name="Channel_One_Description"> Tracking on -msgs ff----cfs. </string>
    <string name="title_activity_login">Sign in</string>
    <string name="signedIn">Signed in</string>
    <string name="signedOut">Signed out</string>

    <!-- Strings related to login -->
    <!-- -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone">Phone Number</string>
    <string name="otp">Token(Optional)</string>
    <string name="token_prompt">Enter token</string>
    <string name="send_token">Send Token</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
