<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="sharedLocation"
        android:title="@string/sharedLocationPref"
        android:summary="@string/sharedLocationDesc"
        android:defaultValue="false" />
    <EditTextPreference
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:defaultValue="5"
        android:key="reachDestinationRadius"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/reachDestinationPref"
        android:summary="@string/reachDestinationPrefDesc"
        />
    <EditTextPreference
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:defaultValue="0"
        android:key="delayedAllowance"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/delayedNotificationPref"
        android:summary="@string/delayedNotificationPrefDesc"
        />
    <EditTextPreference
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:defaultValue="5"
        android:key="inactivityAllowance"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/inactivityAllowancePref"
        android:summary="@string/inactivityAllowanceDesc"
        />
    <EditTextPreference
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:defaultValue="10"
        android:key="inactivityMeters"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/inactivityMeter"
        android:summary="@string/inactivityMeterDesc"
        />
</PreferenceScreen>